<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AplikasiCustomer</string>
    <string name="title_activity_input_customer">InputCustomer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_nama">Nama</string>
    <string name="lbl_tanggal_lahir">Tanggal Lahir</string>
    <string name="lbl_jenis_kelamin">Jenis Kelamin</string>
    <string name="lbl_domisili">Domisili</string>
    <string name="lbl_alamat">Alamat</string>
    <string name="lbl_pria">Pria</string>
    <string name="lbl_wanita">Wanita</string>

    <string-array name="domisili">
        <item>Jakarta</item>
        <item>Bogor</item>
        <item>Depok</item>
        <item>Tangerang</item>
        <item>Bekasi</item>
    </string-array>

</resources>
