<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.muhardin.endy.belajar.android.customer.InputCustomer">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNama"
        android:text="@string/lbl_nama"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNama"
        android:hint="Nama Customer"
        android:layout_below="@id/lblNama"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tanggal_lahir"
        android:id="@+id/lblTanggalLahir"
        android:layout_below="@id/txtNama"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dtTanggalLahir"
        android:layout_below="@id/lblTanggalLahir"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:onClick="tampilkanDatePicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblJenisKelamin"
        android:text="@string/lbl_jenis_kelamin"
        android:layout_below="@id/dtTanggalLahir"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgJenisKelamin"
        android:layout_below="@id/dtTanggalLahir"
        android:layout_toRightOf="@id/lblJenisKelamin"
        android:layout_alignBottom="@id/lblJenisKelamin">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbPria"
            android:onClick="rgJenisKelaminClicked"
            android:text="@string/lbl_pria"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWanita"
            android:onClick="rgJenisKelaminClicked"
            android:text="@string/lbl_wanita"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_domisili"
        android:id="@+id/lblDomisili"
        android:layout_below="@id/rgJenisKelamin"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spDomisili"
        android:layout_below="@id/lblDomisili"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_alamat"
        android:id="@+id/lblAlamat"
        android:layout_below="@id/spDomisili"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAlamat"
        android:layout_below="@id/lblAlamat"/>

</RelativeLayout>
